# pdk2025

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  capture_check.cxx  construct_th3d.cxx  dump.cxx  eff_check.cxx  fluxint.cxx  freeproton.cxx  genie_rate.cxx  main.cxx  neutrinoevent.cxx  neutrinoeventGenie.cxx  plot_from_record_common.cxx  record_pdk.cxx  si_check.cxx  slice_event.cxx
data/11/: angular  angular_raw  momentum
data/decay/: decay.dec
example/: epi.json  run.sh  run1.job.template  run2.job.template  run_local.sh
example_atmo/: antineutrino  neutrino  nue  nuebar  numu  numubar  run.sh  run_H.job.template  run_H_nc.job.template  run_NC.sh  run_NC_local.sh  run_O.job.template  run_local.sh
gen_tool/: gibuu-pdk.cxx  gibuu2root.cxx  pert_to_root.cxx
include/: EvtTracker2event.h  alm.hxx  cmdline.h  common_tools.hxx  commondefine.h  data.h  dataLinkDef.h  decaygen.h  doublemin.hxx  event.h  kf.h  local_rand.h  smear.h  timer.h
src/: EvtTracker2event.cxx  cmdline.cxx  common_tools.cxx  commondefine.cxx  data.cxx  decaygen.cxx  event.cxx  kf.cxx  kf5dof.cxx  kf_egg.cxx  kf_full.cxx  local_rand.cxx  smear.cxx  timer.cxx
